Reverse 03/31/2002 patch that forced the JDK's installed extensions to be loaded at the end of the Catalina classloader's search list.
git-svn-id: https://svn.apache.org/repos/asf/tomcat@287857 13f79535-47bb-0310-9956-ffa450edef68